--- a/FindMyBike/Base.lproj/Main.storyboard
+++ b/FindMyBike/Base.lproj/Main.storyboard
@@ -63,8 +63,17 @@
                                     <color key="titleColor" red="0.0" green="0.66274509800000003" blue="0.89019607840000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="7fH-61-N6l">
+                                <rect key="frame" x="15" y="34" width="55" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <state key="normal" title="Center">
+                                    <color key="titleColor" red="0.0" green="0.66274509800000003" blue="0.89019607840000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
-                                    <action selector="centerToGps:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="bdb-u2-TMi"/>
+                                    <action selector="didPressLocationButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Ohp-5t-tb0"/>
                                 </connections>
                             </button>
                         </subviews>
