Implemented a user tracking mode

--- a/FindMyBike/Base.lproj/Main.storyboard
+++ b/FindMyBike/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="7fH-61-N6l">
                                 <rect key="frame" x="269" y="35" width="36" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="locationOn">
+                                <state key="normal" image="locationOff">
                                     <color key="titleColor" red="0.0" green="0.66274509800000003" blue="0.89019607840000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -70,6 +70,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="locationButton" destination="7fH-61-N6l" id="u5y-Lb-ONO"/>
                         <outlet property="mapView" destination="9XL-Mc-gDq" id="okU-4f-cEu"/>
                         <outlet property="parkeerButton" destination="NRm-C6-zgs" id="Tie-0M-YpH"/>
                     </connections>
@@ -81,7 +82,7 @@
     </scenes>
     <resources>
         <image name="blurBackground" width="320" height="568"/>
-        <image name="locationOn" width="36" height="36"/>
+        <image name="locationOff" width="36" height="36"/>
         <image name="sign" width="267" height="133"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
