Changed a few things

--- a/FindMyBike/Base.lproj/Main.storyboard
+++ b/FindMyBike/Base.lproj/Main.storyboard
@@ -92,6 +92,10 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="vXZ-lx-hvc" id="D0T-Uz-xR7"/>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="CmK-yY-1xF"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
