Build a scrollview layout

--- a/FindMyBike/Base.lproj/Main.storyboard
+++ b/FindMyBike/Base.lproj/Main.storyboard
@@ -54,57 +54,18 @@
                                     <action selector="didPressLocationButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Ohp-5t-tb0"/>
                                 </connections>
                             </button>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" id="Las-oZ-87X">
-                                <rect key="frame" x="0.0" y="420" width="320" height="148"/>
+                            <scrollView multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" id="mPQ-al-oJ8">
+                                <rect key="frame" x="35" y="435" width="250" height="115"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="eUA-Rq-vn8">
-                                    <size key="itemSize" width="250" height="115"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="35" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="signCell" id="gad-We-p7Z" customClass="signCollectionViewCell">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="250" height="115"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cellBackground" id="CYJ-67-M6Q">
-                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="115"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wiz-kc-Ynm" customClass="signC">
-                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="115"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="65"/>
-                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                        <connections>
-                                            <outlet property="background" destination="CYJ-67-M6Q" id="Z4f-l8-jNk"/>
-                                            <outlet property="label" destination="wiz-kc-Ynm" id="rH9-eT-Cxk"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                                <connections>
-                                    <outlet property="dataSource" destination="vXZ-lx-hvc" id="D0T-Uz-xR7"/>
-                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="CmK-yY-1xF"/>
-                                </connections>
-                            </collectionView>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <outlet property="collectionView" destination="Las-oZ-87X" id="GV5-vF-mH1"/>
                         <outlet property="locationButton" destination="7fH-61-N6l" id="u5y-Lb-ONO"/>
                         <outlet property="mapView" destination="9XL-Mc-gDq" id="okU-4f-cEu"/>
                         <outlet property="parkeerButton" destination="NRm-C6-zgs" id="Tie-0M-YpH"/>
+                        <outlet property="scrollView" destination="mPQ-al-oJ8" id="0nQ-XS-7IS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
@@ -114,7 +75,6 @@
     </scenes>
     <resources>
         <image name="blurBackground" width="320" height="568"/>
-        <image name="cellBackground" width="250" height="115"/>
         <image name="locationOff" width="39" height="39"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
